Name:			AppleScript
Version:		0.2
License:		BSD3
License-file:		LICENSE
Author:			Wouter Swierstra <wouter.swierstra@gmail.com>, Reiner Pope <reiner.pope@gmail.com>
Maintainer:		Reiner Pope <reiner.pope@gmail.com>
Synopsis:		Call AppleScript from Haskell.
Description:		This package enables you to compile and 
			execute AppleScript from Haskell applications.
Category:		Foreign
Extra-source-files:	examples/HelloThere.hs
			, examples/OpenLocation.hs
                        , examples/Plain.hs
                        , examples/Rich.hs
                        , examples/RuntimeError.hs
                        , examples/SyntaxError.hs
		        , cbits/RunScript.h
Build-type:		Simple
Cabal-Version:          >= 1.2 && < 2

Library {
if os(darwin) {
  Buildable:		True
  Build-Depends:        base >= 2 && < 5,
                        bytestring < 0.10,
                        data-default < 0.4,
                        text < 0.12,
                        haskell-src-meta >= 0.5.0.3 && < 0.6,
                        text-format < 0.4,
                        network < 2.4,
                        conduit < 0.3,
                        directory < 1.2,
                        template-haskell == 2.7.*,
                        mtl == 2.0.*
  Exposed-modules:
                        Foreign.AppleScript
                        Foreign.AppleScript.Error
                        Foreign.AppleScript.Plain
                        Foreign.AppleScript.Rich
  Frameworks: 		Carbon
  Extensions: 		CPP, ForeignFunctionInterface
  Include-Dirs:         cbits
  C-Sources: 		cbits/RunScript.c
  }
else {
  Buildable:		False
  Build-Depends:        base >= 2 && < 5
  }
if (impl(ghc >= 6.10.3 && < 6.12))
{
  cc-options:	        -msse2
}
}
